[metadata]
name = BasketBox
version = 0.1.0
author = Víctor Rodríguez Dorta
description = Proyecto con Pygame y Mediapipe
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/usuario/mi_proyecto
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    pygame
    pymunk
    mediapipe
    opencv-python
